--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="max-w-2xl mx-auto">
     <header class="text-center mb-8">
       <h1 class="text-5xl font-bold text-white" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.2);">🌊 Checklist Safret Michelle 🌴</h1>
-      <p class="text-white text-lg mt-2">Yalla nensa chaghle!</p>
+      <p class="text-white text-lg mt-2">My GOAT</p>
     </header>
 
     <div id="progressBarContainer" class="progress-bar">
